--- a/example.env
+++ b/example.env
@@ -1,3 +1,6 @@
-DB_PASSWORD=myDbUsername
-SOAP_USERNAME=myUsername
-SOAP_PASSWORD=myPassword
+DB_HOST=example
+DB_USER=example
+DB_DATABASE=example
+DB_PASSWORD=example
+SOAP_USERNAME=example
+SOAP_PASSWORD=example
